# VP-SOM

./: README.md
Active_SLAM_based_on_VP-SOM/: CMakeLists.txt  build_thirdparty.sh  package.xml
Active_SLAM_based_on_VP-SOM/include/: NbvGenerator.h  Object.h  isolation_forest.h  read_local_objects.h  yolo_id.h
Active_SLAM_based_on_VP-SOM/launch/: aslam.launch  rviz.launch
Fabo_robot_and_environment/ASLAM_gazebo_world/: CMakeLists.txt  package.xml
Fabo_robot_and_environment/ASLAM_gazebo_world/launch/: hokuyo_kinectv1_bringup_moveit.launch  hokuyo_kinectv1_bringup_moveit_onlyrobot.launch  hokuyo_kinectv1_bringup_moveit_threedesk.launch  hokuyo_kinectv1_bringup_moveit_twodesk.launch  hokuyo_kinectv1_rviz.launch  mobilearm_bringup_moveit.launch  mobilearm_rviz.launch
Fabo_robot_and_environment/ASLAM_gazebo_world/map/: 1.pbstream  2.pbstream  3.pbstream  4.yaml  map (copy).pgm  twodesk.pgm
Fabo_robot_and_environment/ASLAM_gazebo_world/src/: gazebo_object_rviz.cpp  gazebo_world_parser.cpp
Fabo_robot_and_environment/ASLAM_gazebo_world/urdf/: bear.urdf  hokuyo.urdf.xacro  kinect.urdf.xacro  kinectv1_neck.urdf.xacro  novisual_robot_body.urdf.xacro  robot_hokuyo_kinectv1neck.urdf copy.xacro  robot_hokuyo_kinectv1neck.urdf.xacro  rplidar.urdf.xacro  test_arm.xacro  test_robot.urdf.xacro  test_robot_body.urdf.xacro  test_robot_rplidar_neck.xacro  test_rplidar.xacro
Fabo_robot_and_environment/ASLAM_gazebo_world/world/: ambulance.world  desk_book.world  kinect.world  nine.world  nine_desk.world  nine_desk_drift.world  nine_desk_fixcamera.world  nine_desk_wall.world  nine_highdesk.world  nine_highdesk_1.world  nine_highdesk_2.world  nine_highdesk_3.world  nine_highdesk_wall.world  onedesk_greenbottle.world  onedesk_wall.world  six.world  six2.world  teddy.world  threedesk_wall.world  threedesk_wall_2.world  twodesk (another copy).world  twodesk (copy).world  twodesk.world  twodesk_wall.world  twodesk_wall_2.world
Fabo_robot_and_environment/fabo_gazebo_navigation/: CMakeLists.txt  package.xml
Fabo_robot_and_environment/fabo_gazebo_navigation/include/: BtManager.h  common_include.h  serial.h
Fabo_robot_and_environment/fabo_shell/: CMakeLists.txt  package.xml
Fabo_robot_and_environment/fabo_shell/launch/: display.launch  gazebo.launch
Fabo_robot_and_environment/fabo_shell/urdf/: fabo_shell.csv  fabo_shell.urdf
Fabo_robot_and_environment/fabo_teleop/: CMakeLists.txt  package.xml
Fabo_robot_and_environment/move_base_action_test/: CMakeLists.txt  package.xml
Fabo_robot_and_environment/robot_hokuyo_kinectv1neck/: .setup_assistant  CMakeLists.txt  package.xml
Fabo_robot_and_environment/test_mobilearm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yolo_ros_modified/: README.md
yolo_ros_modified/darknet/: Makefile  darknet
yolo_ros_modified/darknet_ros/: CMakeLists.txt
(+102 files in other folders)
